--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,14 +4,14 @@ phases:
   pre_build:
     commands:
       - echo Fazendo login no ECR...      
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 905418025693.dkr.ecr.us-east-1.amazonaws.com
-      - REPOSITORY_URI=905418025693.dkr.ecr.us-east-1.amazonaws.com/bia
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 569276508545.dkr.ecr.us-east-1.amazonaws.com
+      - REPOSITORY_URI=569276508545.dkr.ecr.us-east-1.amazonaws.com/bia-cicd
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
     commands:
       - echo Build iniciado em `date`
-      - echo Gerando imagem da BIA...
+      - echo Gerando imagem da BIA.-CICD..
       - docker build -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
